tests/baselines/reference/commentsOnJSXExpressionsArePreserved(jsx=react-jsxdev,module=system).errors.txt
tests/cases/compiler/commentsOnJSXExpressionsArePreserved.tsx(5,16): error TS2792: Cannot find module 'react/jsx-dev-runtime'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== tests/cases/compiler/commentsOnJSXExpressionsArePreserved.tsx (1 errors) ====
    // file is intentionally not a module - this tests for a crash in the module/system transforms alongside the `react-jsx` and `react-jsxdev` outputs
    namespace JSX {}
    class Component {
        render() {
            return <div>
                   ~~~~~
                {/* missing */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
                {null/* preserved */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                {
    ~~~~~~~~~~~~~
                    // ??? 1
    ~~~~~~~~~~~~~~~~~~~~~~~~
                }
    ~~~~~~~~~~~~~
                { // ??? 2
    ~~~~~~~~~~~~~~~~~~~~~~
                }
    ~~~~~~~~~~~~~
                {// ??? 3
    ~~~~~~~~~~~~~~~~~~~~~
                }
    ~~~~~~~~~~~~~
                {
    ~~~~~~~~~~~~~
                    // ??? 4
    ~~~~~~~~~~~~~~~~~~~~~~~~
                /* ??? 5 */}
    ~~~~~~~~~~~~~~~~~~~~~~~~
            </div>;
    ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'react/jsx-dev-runtime'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
        }
    }